Environment/k3d/k8s/api-v1.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    system: Api
  name: system-api

---
apiVersion: v1
kind: Service
metadata:
  labels:
    system: Api
    environment: Dev
    service: Api-V1
  name: dev-api-v1
  namespace: system-api

spec:
  selector:
    system: Api
    environment: Dev
    service: Api-V1
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    system: Api
    environment: Dev
    service: Api-V1
  name: dev-api-v1
  namespace: system-api
spec:
  selector:
    matchLabels:
      system: Api
      environment: Dev
      service: Api-V1
  template:
    metadata:
      labels:
        system: Api
        environment: Dev
        service: Api-V1
    spec:
      serviceAccountName: system-api-manager

      containers:
        - name: head
          imagePullPolicy: Always
          # this doesn't actually do anything, it just exists here for us
          # to be able to intercept this deployment with telepresence and
          # direct it to our own local platform-api
          image: nginxdemos/hello
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /app/data
              name: config-files
      volumes:
        - name: secrets
          secret:
            secretName: dev-api-v1-secrets
        - name: config-files
          configMap:
            name: dev-api-v1-config-files
