Environment/k3d/k8s/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    dolittle.io/tenant-id: 453e04a7-4f9d-42f2-b36c-d51fa2c83fa3
    dolittle.io/application-id: 11b6cf47-5d9f-438f-8116-0d9828654657
  labels:
    tenant: Customer-Chris
    application: Taco
    environment: Dev
  name: dev
  namespace: application-11b6cf47-5d9f-438f-8116-0d9828654657
spec:
  podSelector:
    matchLabels:
      tenant: Customer-Chris
      application: Taco
      environment: Dev
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tenant: Customer-Chris
              application: Taco
              environment: Dev
    - from:
        - namespaceSelector:
            matchLabels:
              system: Monitoring
              monitoring: Metrics
          podSelector:
            matchLabels:
              system: Monitoring
              monitoring: Metrics
              service: Prometheus
        - namespaceSelector:
            matchLabels:
              system: Api
          podSelector:
            matchLabels:
              system: Api
              environment: Prod
              service: Api-V1
