Environment/k3d/k8s/networking-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    dolittle.io/tenant-id: 453e04a7-4f9d-42f2-b36c-d51fa2c83fa3
    dolittle.io/application-id: 11b6cf47-5d9f-438f-8116-0d9828654657
  labels:
    tenant: Customer-Chris
    application: Taco
  name: all-system-api
  namespace: application-11b6cf47-5d9f-438f-8116-0d9828654657
spec:
  podSelector:
    matchLabels:
      tenant: Customer-Chris
      application: Taco
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              system: Api
